--- a/Module-17-Challenge-Resources/Starter_Code/credit_risk_resampling.ipynb
+++ b/Module-17-Challenge-Resources/Starter_Code/credit_risk_resampling.ipynb
@@ -26,7 +26,21 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "from imblearn.under_sampling import ClusterCentroids\n",
+    "from imblearn.combine import SMOTEENN\n",
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
+    "from imblearn.ensemble import EasyEnsembleClassifier\n",
+    "from imblearn.metrics import classification_report_imbalanced"
    ]
   },
   {
@@ -291,7 +305,7 @@
    ],
    "source": [
     "# Load the data\n",
-    "file_path = Path('../Resources/LoanStats_2019Q1.csv.zip')\n",
+    "file_path = Path('../Resources/LoanStats_2019Q1.csv')\n",
     "df = pd.read_csv(file_path, skiprows=1)[:-2]\n",
     "df = df.loc[:, columns].copy()\n",
     "\n",
@@ -336,10 +350,13 @@
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "X = # YOUR CODE HERE\n",
+    "X = df.drop([\"loan_status\"], axis=1)\n",
+    "\n",
+    "# Encode \n",
+    "X = pd.get_dummies(X)\n",
     "\n",
     "# Create our target\n",
-    "y = # YOUR CODE HERE"
+    "y = df['loan_status']"
    ]
   },
   {
@@ -682,7 +699,7 @@
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "y['loan_status'].value_counts()"
+    "y.value_counts()"
    ]
   },
   {
@@ -692,7 +709,7 @@
    "outputs": [],
    "source": [
     "# Create X_train, X_test, y_train, y_test\n",
-    "# YOUR CODE HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
    ]
   },
   {
@@ -737,7 +754,10 @@
    ],
    "source": [
     "# Resample the training data with the RandomOversampler\n",
-    "# YOUR CODE HERE"
+    "ros = RandomOverSampler(random_state=1)\n",
+    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -748,10 +768,7 @@
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l2', random_state=1, solver='warn',\n",
-       "          tol=0.0001, verbose=0, warm_start=False)"
+       "LogisticRegression(random_state=1)"
       ]
      },
      "execution_count": 10,
@@ -761,7 +778,8 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "log_regress_model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "log_regress_model.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -772,7 +790,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7163908158823367"
+       "0.6503524738582371"
       ]
      },
      "execution_count": 11,
@@ -782,7 +800,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "acc_score = log_regress_model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, acc_score)"
    ]
   },
   {
@@ -793,8 +812,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[   73,    28],\n",
-       "       [ 4960, 12144]])"
+       "array([[   70,    31],\n",
+       "       [ 6711, 10393]], dtype=int64)"
       ]
      },
      "execution_count": 12,
@@ -804,31 +823,34 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE 0.7163\n",
+    "confusion_matrix(y_test, acc_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Oversampling Imbalanced Classification Report\n",
+      "\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.72      0.71      0.03      0.72      0.51       101\n",
-      "   low_risk       1.00      0.71      0.72      0.83      0.72      0.51     17104\n",
+      "  high_risk       0.01      0.69      0.61      0.02      0.65      0.42       101\n",
+      "   low_risk       1.00      0.61      0.69      0.76      0.65      0.42     17104\n",
       "\n",
-      "avg / total       0.99      0.71      0.72      0.82      0.72      0.51     17205\n",
+      "avg / total       0.99      0.61      0.69      0.75      0.65      0.42     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(\"Oversampling Imbalanced Classification Report\" + \"\\n\" + \"\\n\" + classification_report_imbalanced(y_test, acc_score))"
    ]
   },
   {
@@ -840,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -849,49 +871,26 @@
        "Counter({'low_risk': 51366, 'high_risk': 51366})"
       ]
      },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Resample the training data with SMOTE\n",
-    "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l2', random_state=1, solver='warn',\n",
-       "          tol=0.0001, verbose=0, warm_start=False)"
-      ]
-     },
      "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "# Resample the training data with SMOTE\n",
+    "X_smote, y_smote = SMOTE(random_state=1).fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7001170474858525"
+       "LogisticRegression(random_state=1)"
       ]
      },
      "execution_count": 16,
@@ -900,20 +899,20 @@
     }
    ],
    "source": [
-    "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "# Train the Logistic Regression model using the resampled data\n",
+    "smote_regress = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "smote_regress.fit(X_smote, y_smote)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   71,    30],\n",
-       "       [ 5178, 11926]])"
+       "0.6621602612787003"
       ]
      },
      "execution_count": 17,
@@ -922,32 +921,57 @@
     }
    ],
    "source": [
-    "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "# Calculated the balanced accuracy score\n",
+    "smote_acc = smote_regress.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, smote_acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   64,    37],\n",
+       "       [ 5291, 11813]], dtype=int64)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the confusion matrix\n",
+    "confusion_matrix(y_test, smote_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SMOTE Imbalanced Classification Report\n",
+      "\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.70      0.70      0.03      0.70      0.49       101\n",
-      "   low_risk       1.00      0.70      0.70      0.82      0.70      0.49     17104\n",
+      "  high_risk       0.01      0.63      0.69      0.02      0.66      0.44       101\n",
+      "   low_risk       1.00      0.69      0.63      0.82      0.66      0.44     17104\n",
       "\n",
-      "avg / total       0.99      0.70      0.70      0.82      0.70      0.49     17205\n",
+      "avg / total       0.99      0.69      0.63      0.81      0.66      0.44     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(\"SMOTE Imbalanced Classification Report\" + \"\\n\" + \"\\n\" + classification_report_imbalanced(y_test, smote_acc))"
    ]
   },
   {
@@ -969,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -978,105 +1002,109 @@
        "Counter({'high_risk': 246, 'low_risk': 246})"
       ]
      },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Resample the data using the ClusterCentroids resampler\n",
-    "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l2', random_state=1, solver='warn',\n",
-       "          tol=0.0001, verbose=0, warm_start=False)"
-      ]
-     },
      "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "# Resample the data using the ClusterCentroids resampler\n",
+    "cluster = ClusterCentroids(random_state=1)\n",
+    "X_cluster, y_cluster = cluster.fit_resample(X_train, y_train)\n",
+    "\n",
+    "Counter(y_cluster)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6433412021043078"
+       "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train the Logistic Regression model using the resampled data\n",
+    "cluster_regress = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "cluster_regress.fit(X_cluster, y_cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5442459178097417"
+      ]
+     },
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "cluster_acc = cluster_regress.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, cluster_acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  82,   19],\n",
-       "       [8983, 8121]])"
+       "array([[   68,    33],\n",
+       "       [10002,  7102]], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, cluster_acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Undersampling Imbalanced Classification Report\n",
+      "\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.81      0.47      0.02      0.62      0.40       101\n",
-      "   low_risk       1.00      0.47      0.81      0.64      0.62      0.37     17104\n",
+      "  high_risk       0.01      0.67      0.42      0.01      0.53      0.29       101\n",
+      "   low_risk       1.00      0.42      0.67      0.59      0.53      0.27     17104\n",
       "\n",
-      "avg / total       0.99      0.48      0.81      0.64      0.62      0.37     17205\n",
+      "avg / total       0.99      0.42      0.67      0.58      0.53      0.27     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(\"Undersampling Imbalanced Classification Report\" + \"\\n\" + \"\\n\" + classification_report_imbalanced(y_test, cluster_acc))"
    ]
   },
   {
@@ -1098,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1107,105 +1135,109 @@
        "Counter({'high_risk': 51361, 'low_risk': 46653})"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Resample the training data with SMOTEENN\n",
-    "# YOUR CODE HERE"
+    "smoteen = SMOTEENN(random_state = 1)\n",
+    "X_smoteen, y_smoteen = smoteen.fit_resample(X_train, y_train)\n",
+    "\n",
+    "Counter(y_smoteen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l2', random_state=1, solver='warn',\n",
-       "          tol=0.0001, verbose=0, warm_start=False)"
+       "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "smoteen_regress = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "smoteen_regress.fit(X_smoteen, y_smoteen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.69732081662329"
+       "0.6461047268197353"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "smoteen_acc = smoteen_regress.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, smoteen_acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   72,    29],\n",
-       "       [ 5443, 11661]])"
+       "array([[  72,   29],\n",
+       "       [7195, 9909]], dtype=int64)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, smoteen_acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Combination Imbalanced Classification Report\n",
+      "\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.71      0.68      0.03      0.70      0.49       101\n",
-      "   low_risk       1.00      0.68      0.71      0.81      0.70      0.48     17104\n",
+      "  high_risk       0.01      0.71      0.58      0.02      0.64      0.42       101\n",
+      "   low_risk       1.00      0.58      0.71      0.73      0.64      0.41     17104\n",
       "\n",
-      "avg / total       0.99      0.68      0.71      0.81      0.70      0.48     17205\n",
+      "avg / total       0.99      0.58      0.71      0.73      0.64      0.41     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(\"Combination Imbalanced Classification Report\" + \"\\n\" + \"\\n\" + classification_report_imbalanced(y_test, smoteen_acc))"
    ]
   },
   {
@@ -1218,9 +1250,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "mlenv",
    "language": "python",
-   "name": "dev"
+   "name": "mlenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1232,7 +1264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
