Updating Challenge files.

--- a/Module-17-Challenge-Resources/Starter_Code/credit_risk_resampling.ipynb
+++ b/Module-17-Challenge-Resources/Starter_Code/credit_risk_resampling.ipynb
@@ -1241,11 +1241,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In this Challenge we were tasked with determining which resampling technique is best to predict bad loans. We used the following:\n",
+    "\n",
+    "1. Naive Random Oversampling\n",
+    "2. SMOTE Oversampling\n",
+    "3. Undersampling\n",
+    "4. Combination (Over and Under) Sampling\n",
+    "\n",
+    "After performing the above techniques, we can compare the Classification Reports. We can see that precision measurement of all four techniques is 99%. However, this can be misleading. Instead we need to look at the recall and F1 score of each technique. This is because when we train each sampling technique with the given data to predict the loan status, we also compare it aganist the actual data. And the recall is a measure of how many predictions were predicted correctly. In addition, if there is a high discrepancy between the precision and recall, the F1 score will be low. And if the F1 score is low, then the technique is not the best at predicting bad loans. \n",
+    "\n",
+    "Keeping the aforementioned points in mind, we can see that the SMOTE Oversampling technique is the best at predicting bad loans. Not only does it have a the highest recall percentage (69%), it also has the highest F1 score (81%). In addition, the SMOTE Oversampling technique has the highest balanced accuracy score of 66%."
+   ]
   }
  ],
  "metadata": {
